<resources>
    <string name="app_name">PMATH</string>
    <string name="dummy_holder_name">Ini adalah nama menu\n</string>
    <string name="search_hint">Temukan disini...</string>
    <string name="tank_selection">Pilih Tangki</string>
    <string name="status_selection">Pilih Status</string>
    <string name="refeuller_selection">Pilih Nomor Refeuller</string>
    <string name="database_not_found">Data tidak ditemukan</string>
    <string name="recomendation_tank">Max Kapasita Tangki : %1$s L.&#10; Hasil Dipping : %2$s L.&#10; Rekomendasi Pengisian : %3$s L.</string>
    <string name="dummy_liter">100000 L</string>
    <string name="max_capacity_tank">Max Capacity</string>
    <string name="dipping_result_tank">Volume Produk</string>
    <string name="receiving_capacity_tank">Receiving Capacity</string>
    <string name="pumpable_stock_tank">Pumpable Stock</string>
    <string name="death_stock_tank">Death Stock</string>
    <string name="is_pumpable_tank">Is Pumpable</string>
    <string name="ullage_tank">Ullage</string>
    <string name="liter_holder">%1$s</string>
    <string name="aircraft_request_final">Masukan Request Final</string>
    <string name="mm_value">Masukkan nilai mm</string>
    <string name="request_final">Request Final</string>
    <string name="remain_value">Masukan Nilai Sisa</string>
    <string name="remain">Remain</string>
    <string name="refeuller_value">Masukan sisa Refueller</string>
    <string name="oke_stock_aircraft">Hasil perkiraan yang dibutuhkan dalam pengisian ini adalah %1$s liter, dengan stock sisa %2$s liter pengisian dapat dilakukan.</string>
    <string name="oke_stock_aircraft_warning">Hasil Perkiraan yang dibutuhkan dalam pengisian ini adalah %1$s liter, dengan total stock %2$s liter pengisian dapat dilakukan, pertimbangkan untuk topping up setelah pengisian selesai dilakukan.</string>
    <string name="not_oke_stock_aircraft">Hasil Perkiraan yang dibutuhkan dalam pengisian ini adalah %1$s liter, dengan total stock %2$s liter pengisian tidak dapat dilakukan. Segera lakukan topping up.</string>
    <string name="decision_topping_up">Topping Up</string>
    <string-array name="holder_name">
        <item>Penerimaan Bridger</item>
        <item>Cek Stock</item>
        <item>Topping Up Refueller</item>
        <item>Aircraft Fuel Remain</item>
        <item>Calculator</item>
        <item>Converter</item>
        <item>Flashlight</item>
        <item>Stopwatch</item>
        
        <item>Calculator Dopping Stadis</item>
        <item>Call Developer</item>
    </string-array>
    <string-array name="holder_name_density">
        <item>Bridger Quality Control</item>
        <item>Volume Control</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_1">Quality Control</string>
    <string name="tab_2">Volume Control</string>
    <string name="tab_3">Quality Control Data Collection</string>
    <string name="remain_refeuller">Sisa produk dalam tangki</string>
    <string name="choice_tank">Pilih tangki</string>
    <string name="choice_refeuller">Pilih Refueller</string>
    <string name="insert_mm">Masukkan nilai mm</string>
    <string name="inset_liter">Masukan dalam format liter</string>
    <string name="operator">Operator</string>
    <string name="bridger_npr">Masukkan plat Bridger</string>
    <string name="masukan_bpp">Masukan BPP</string>
    <string name="liter_volume">Masukkan Volume Liter</string>
    <string name="seal">Masukkan Seal</string>
    <string name="test_report_no">Masukkan Nomor Test Report</string>
    <string name="vc_tab1">Quality Control</string>
    <string name="vc_tab2">Data Quality Control</string>
    <string name="tab_dipping_1">Dipping Tank</string>
    <string name="tab_dipping_2">Dipping Refueller</string>
    <string name="recomendation">Rekomendasi topping</string>
    <string name="result">Lihat Hasil</string>
    <string name="date_container">%1$s:%2$s:%3$s</string>
    <string name="time_container">%1$s:%2$s</string>
    <string name="hapus_data">Hapus Data : %1$s</string>
    <string-array name="tangks_choice">
        <item>Tangki 9</item>
        <item>Tangki 10</item>
        <item>Tangki 11</item>
    </string-array>
    <string-array name="refeullers_choice">
        <item>SNR 17</item>
        <item>SNR 19</item>
        <item>SNR 20</item>
        <item>SNR 21</item>
        <item>SNR 22</item>
    </string-array>
    <string-array name="operator_choice">
        <item>MISTO</item>
        <item>TOMMY</item>
        <item>DARUL</item>
    </string-array>
    <string-array name="m_choice">
        <item>M1</item>
        <item>M2</item>
        <item>M3</item>
        <item>M4</item>
    </string-array>
    <string-array name="bridger_choice">
        <item>B 9854 SFV</item>
        <item>KB 8137 AV</item>
        <item>B 9280 SFU</item>
        <item>DA 8295 PZ</item>
        <item>DA 8294 PZ</item>
    </string-array>
    <string-array name="spv_rsd_choice">
        <item>Achmad Nur Karim</item>
        <item>May Stevan Pujianto</item>
        <item>Kamarud Zaman</item>

    </string-array>
    <string-array name="bridger_quantity_choice">
        <item>16.000</item>
        <item>8.000</item>
        <item>24.000</item>
    </string-array>
        <string name="privacy_policy_title">Kebijakan Privasi</string>
        <string name="privacy_policy_intro">Kebijakan privasi ini berlaku untuk aplikasi PMATH (selanjutnya disebut "Aplikasi") untuk perangkat seluler yang dibuat oleh Pertamina Patra Niaga AFT. Syamsudin Noor (selanjutnya disebut "Penyedia Layanan") sebagai layanan gratis. Layanan ini dimaksudkan untuk digunakan "SEBAGAIMANA ADANYA".</string>
        <string name="privacy_policy_info_title">Pengumpulan dan Penggunaan Informasi</string>
        <string name="privacy_policy_info">Aplikasi mengumpulkan informasi ketika Anda mengunduh dan menggunakannya. Informasi ini dapat mencakup hal-hal seperti:\n• Alamat Protokol Internet perangkat Anda (misalnya alamat IP)\n• Halaman dari Aplikasi yang Anda kunjungi, waktu dan tanggal kunjungan, serta lama waktu yang dihabiskan pada halaman tersebut\n• Lama penggunaan Aplikasi\n• Sistem operasi yang Anda gunakan pada perangkat seluler Anda\n\nAplikasi tidak mengumpulkan informasi yang tepat mengenai lokasi perangkat seluler Anda.\n\nPenyedia Layanan dapat menggunakan informasi yang Anda berikan untuk menghubungi Anda dari waktu ke waktu guna memberikan informasi penting, pemberitahuan yang diperlukan, serta promosi pemasaran.\n\nUntuk pengalaman yang lebih baik saat menggunakan Aplikasi, Penyedia Layanan dapat meminta Anda memberikan informasi pribadi tertentu, termasuk namun tidak terbatas pada: hollandideveloper@gmail.com. Informasi yang diminta akan disimpan dan digunakan sebagaimana dijelaskan dalam kebijakan privasi ini.</string>
        <string name="privacy_policy_third_party_title">Akses Pihak Ketiga</string>
        <string name="privacy_policy_third_party">Hanya data yang teragregasi dan dianonimkan yang secara berkala dikirimkan ke layanan eksternal untuk membantu Penyedia Layanan dalam meningkatkan Aplikasi dan layanan mereka. Penyedia Layanan dapat membagikan informasi Anda kepada pihak ketiga dengan cara yang dijelaskan dalam pernyataan privasi ini.\n\nPenyedia Layanan dapat mengungkapkan Informasi yang Diberikan Pengguna dan Informasi yang Dikumpulkan Secara Otomatis:\n• sebagaimana diwajibkan oleh hukum, misalnya untuk mematuhi panggilan pengadilan atau proses hukum serupa;\n• ketika mereka meyakini dengan itikad baik bahwa pengungkapan diperlukan untuk melindungi hak mereka, melindungi keselamatan Anda atau keselamatan orang lain, menyelidiki penipuan, atau menanggapi permintaan pemerintah;\n• dengan penyedia layanan terpercaya mereka yang bekerja atas nama mereka, tidak memiliki penggunaan independen atas informasi yang diungkapkan, dan telah menyetujui untuk mematuhi aturan yang tercantum dalam pernyataan privasi ini.</string>
        <string name="privacy_policy_opt_out_title">Hak untuk Menolak (Opt-Out)</string>
        <string name="privacy_policy_opt_out">Anda dapat menghentikan semua pengumpulan informasi oleh Aplikasi dengan mudah dengan menghapus instalasi. Anda dapat menggunakan proses penghapusan standar yang tersedia pada perangkat seluler Anda atau melalui toko aplikasi atau jaringan.</string>
        <string name="privacy_policy_data_retention_title">Kebijakan Retensi Data</string>
        <string name="privacy_policy_data_retention">Penyedia Layanan akan menyimpan data yang diberikan pengguna selama Anda menggunakan Aplikasi dan untuk jangka waktu yang wajar setelahnya. Jika Anda ingin mereka menghapus Data yang Diberikan Pengguna yang telah Anda sampaikan melalui Aplikasi, silakan hubungi mereka di hollandideveloper@gmail.com dan mereka akan merespons dalam waktu yang wajar.</string>
        <string name="privacy_policy_children_title">Anak-anak</string>
        <string name="privacy_policy_children">Penyedia Layanan tidak menggunakan Aplikasi untuk secara sadar meminta data atau memasarkan kepada anak-anak di bawah usia 13 tahun.\n\nPenyedia Layanan tidak secara sadar mengumpulkan informasi pribadi dari anak-anak. Penyedia Layanan mendorong semua anak untuk tidak pernah mengirimkan informasi pribadi melalui Aplikasi dan/atau Layanan. Penyedia Layanan mendorong orang tua dan wali untuk memantau penggunaan internet anak-anak mereka dan membantu menegakkan kebijakan ini dengan menginstruksikan anak-anak mereka untuk tidak memberikan informasi pribadi melalui Aplikasi dan/atau Layanan tanpa izin mereka.\n\nJika Anda yakin bahwa seorang anak telah memberikan informasi pribadi kepada Penyedia Layanan melalui Aplikasi dan/atau Layanan, silakan hubungi Penyedia Layanan (hollandideveloper@gmail.com) agar tindakan yang diperlukan dapat dilakukan.\n\nAnda juga harus berusia minimal 16 tahun untuk menyetujui pemrosesan informasi pribadi Anda di negara Anda (di beberapa negara kami dapat mengizinkan orang tua atau wali Anda untuk melakukannya atas nama Anda).</string>
        <string name="privacy_policy_security_title">Keamanan</string>
        <string name="privacy_policy_security">Penyedia Layanan peduli terhadap kerahasiaan informasi Anda. Penyedia Layanan menyediakan perlindungan fisik, elektronik, dan prosedural untuk melindungi informasi yang mereka proses dan simpan.</string>
        <string name="privacy_policy_changes_title">Perubahan</string>
        <string name="privacy_policy_changes">Kebijakan Privasi ini dapat diperbarui dari waktu ke waktu untuk alasan apa pun. Penyedia Layanan akan memberi tahu Anda mengenai setiap perubahan pada Kebijakan Privasi dengan memperbarui halaman ini dengan Kebijakan Privasi yang baru.\n\nAnda disarankan untuk secara berkala meninjau Kebijakan Privasi ini, karena penggunaan yang berkelanjutan dianggap sebagai persetujuan atas semua perubahan.\n\nKebijakan privasi ini berlaku sejak 27 September 2025.</string>
        <string name="privacy_policy_consent_title">Persetujuan Anda</string>
        <string name="privacy_policy_consent">Dengan menggunakan Aplikasi, Anda menyetujui pemrosesan informasi Anda sebagaimana diatur dalam Kebijakan Privasi ini sekarang dan sebagaimana yang akan diubah oleh kami.</string>
        <string name="privacy_policy_contact_title">Hubungi Kami</string>
        <string name="privacy_policy_contact">Jika Anda memiliki pertanyaan mengenai privasi saat menggunakan Aplikasi, atau memiliki pertanyaan tentang praktik kami, silakan hubungi Penyedia Layanan melalui email di hollandideveloper@gmail.com.</string>
    <string name="send_data">Send Data</string>
    <string name="filter_data">Filter Data</string>
    <string name="tidak_ada_data">Tidak Ada Data</string>
    <string name="save_caps">Safe Capacity</string>
</resources>