<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.aircraft.AircraftActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            app:titleTextColor="@color/white"
            app:navigationIconTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:iconTint="@color/white"
            app:menu="@menu/help_menu"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aircraft_request_final"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/final_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/request_final"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remain_value"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/remain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/remain"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refeuller_value"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/refeuller_volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/remain_refeuller"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button

            android:id="@+id/button_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:enabled="false"
            android:text="Hitung" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            android:paddingBottom="20dp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/whiteOf">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linearLayoutResult"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:id="@+id/img_result_icon"
                    android:layout_height="250dp"
                    android:src="@drawable/find_s"
                    android:visibility="visible"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewResult"
                    android:visibility="gone"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:justificationMode="inter_word"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>